// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<label
  className="root
        
        
        rootLayoutVertical
        
        rootSizeMedium
        
        rootVariantOutline"
  htmlFor="test"
  id="test__label"
>
  <div
    className="label"
    id="test__labelText"
  >
    label
  </div>
  <div
    className="field"
  >
    <div
      className="inputContainer"
    >
      <textarea
        className="input"
        cols={null}
        disabled={false}
        id="test"
        onChange={null}
        placeholder={null}
        required={false}
        rows={3}
      />
    </div>
  </div>
</label>
`;

exports[`rendering renders correctly with all props 1`] = `
<label
  className="root
        isRootFullWidth
        isRootInFormLayout
        rootLayoutHorizontal
        isRootRequired
        rootSizeLarge
        isRootStateInvalid
        rootVariantFilled"
  htmlFor="test"
  id="test__label"
>
  <div
    className="label
          isLabelHidden"
    id="test__labelText"
  >
    label
  </div>
  <div
    className="field"
  >
    <div
      className="inputContainer"
    >
      <textarea
        className="input"
        cols={10}
        disabled={true}
        id="test"
        onChange={null}
        placeholder="placeholder"
        required={true}
        rows={5}
        value="value"
      />
      <div
        className="bottomLine"
      />
    </div>
    <div
      className="helperText"
      id="test__helperText"
    >
      some help
    </div>
  </div>
</label>
`;

exports[`rendering renders correctly with hidden label 1`] = `
<label
  className="root
        
        
        rootLayoutVertical
        
        rootSizeMedium
        
        rootVariantOutline"
  htmlFor="test"
  id="test__label"
>
  <div
    className="label
          isLabelHidden"
    id="test__labelText"
  >
    label
  </div>
  <div
    className="field"
  >
    <div
      className="inputContainer"
    >
      <textarea
        className="input"
        cols={null}
        disabled={false}
        id="test"
        onChange={null}
        placeholder={null}
        required={false}
        rows={3}
      />
    </div>
  </div>
</label>
`;
